tests/negative/neg_own_inout_move.safe
-- Test: neg_own_inout_move
-- Description: Passing an owning access value by in out after it has been moved.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96a:0eaf48aa
-- Expected: REJECT double_move

package Inout_Move_Test

   type Payload is record
      Value : Integer;


   type Payload_Ptr is access Payload;

   function Consume (Ref : in out Payload_Ptr)
      return;


   function Use_Inout
      Owner : Payload_Ptr = new ((Value = 5) as Payload);

      Consume (Owner);
      Consume (Owner);  -- ERROR: Owner was already moved by the first call

